# loadconfig

./: CMakeLists.txt  README.md
src/: loadconfig.c
test/: app.cfg  bbg.cfg  hardware.cfg  init.cfg  tgp.cfg  vars.json
